# AlphaWealth

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  mvnw.cmd  pom.xml  start-ibkr-gateway.cmd  test-smoke.sh
.archived-cleanup/: README.md
.archived-cleanup/old-archive/root-old/: ui-preview.html
.archived-cleanup/old-archive/ui-old/: index.css
.archived-cleanup/old-archive/ui-old/components/: ErrorBoundary.jsx  OrderBook.jsx  OrderFeed.jsx  Positions.jsx  PriceChart.jsx  SystemStatus.jsx  TradeBlotter.jsx
.archived-cleanup/root-scripts/: preview.html  setup-dirs.ps1  start.cmd  stop.cmd  test-smoke.cmd
.archived-cleanup/ui-hooks/: useMarketData.js  useWebSocket.js
.archived-cleanup/ui-lib/: api.js  marketdata.js
.github/workflows/: ci.yml
cpp-native/technical-signal-engine/: CMakeLists.txt  Dockerfile  README.md
cpp-native/technical-signal-engine/include/: feature_engine.hpp
cpp-native/technical-signal-engine/src/: cli.cpp  feature_engine.cpp  indicators.cpp  main.cpp  signal_server.cpp
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
modules/ai-advisor-svc/: Dockerfile  pom.xml
modules/alerts-svc/: Dockerfile  pom.xml
modules/analysis-svc/: Dockerfile  pom.xml
modules/api-gw-graphql/: Dockerfile  pom.xml
modules/backtest-svc/: Dockerfile  pom.xml
modules/common/: pom.xml
modules/fingpt-svc/: Dockerfile  fingpt_service.py  requirements.txt
modules/ibkr-sync-svc/: Dockerfile  pom.xml
modules/ibkr-sync-svc/lib/: PLACE_TwsApi.jar_HERE.txt
modules/live-data-svc/: Dockerfile  live_data_service.py  requirements.txt  test_live_data_service.py
modules/market-data-svc/: Dockerfile  pom.xml
modules/match-engine-svc/: Dockerfile  pom.xml
modules/net-worth-svc/: Dockerfile  pom.xml
modules/order-gateway-svc/: Dockerfile  pom.xml
modules/plaid-banking-svc/: Dockerfile  pom.xml
modules/portfolio-svc/: Dockerfile  pom.xml
modules/risk-svc/: Dockerfile  pom.xml
modules/sentiment-svc/: Dockerfile  requirements.txt  sentiment_service.py
modules/teller-banking-svc/: Dockerfile  pom.xml
python-research/: Dockerfile  README.md  pyproject.toml
python-research/src/alphatrade_research/: __init__.py  indicators.py  model_service.py  news_features.py
python-research/src/alphatrade_research/examples/: sma_backtest.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  main.jsx  styles.css
ui/src/components/: AvatarUploader.jsx  BrokerConnections.jsx  CommandPalette.jsx  ErrorBoundary.jsx  ForecastWidget.jsx  Header.jsx  IbkrConnectModal.jsx  Icon.jsx  OrderEntry.jsx  Sidebar.jsx  TickerTape.jsx  UI.jsx
ui/src/components/ui/: Button.jsx  Tag.jsx  (+7 more)
ui/src/hooks/: useBanking.js  useForecast.js  useIbkrConnect.js  useIbkrPositions.js  useIbkrStatus.js  useLiveQuotes.js  useNetWorth.js  useSentiment.js
ui/src/lib/: api.js  banking.js  cn.js  mockData.js  platform.js  tokens.js  userPrefs.js
ui/src/pages/: AIAdvisor.jsx  Backtest.jsx  Banking.jsx  Dashboard.jsx  FIRE.jsx  Markets.jsx  NetWorth.jsx  Opportunities.jsx  Options.jsx  Patterns.jsx  Portfolio.jsx  Seasonality.jsx  Settings.jsx  TradingPage.jsx
(+145 files in other folders)
