[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphatrade-research"
version = "0.1.0"
description = "Research and quantitative prototyping workspace for AlphaTrade"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pyarrow>=16.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
